--- a/client/web/src/repo/RepoHeader.scss
+++ b/client/web/src/repo/RepoHeader.scss
@@ -12,6 +12,7 @@
     .theme-redesign & {
         border: none;
         align-items: center;
+        margin-top: 0.5rem;
         margin-bottom: 0.5rem;
     }
 
